# UOPOpenCV

./: .gitattributes  .gitignore  build.sh  install-opencv.sh  main_template.cpp
SamplePictures/: sample.wmv
cw/: .gitattributes
cw/HOG2/: CMakeLists.txt  main.cpp
cw/HOGTutorial/: HOGTutorial.cpp
cw/OpenPoseTutorial/: CMakeLists.txt  datasets  main.cpp
cw/SVM tutorial/: tutorial2.py
cw/cw_proj/: .gitattributes  CMakeLists.txt  Coursework notes.ipynb  NOTES.md  main.py  model_hyperparameters.py
cw/cw_proj/data/: x_train.npy  x_val.npy  y_train.npy  y_val.npy
cw/tutorials/DigitsTutorial/: CMakeLists.txt  DigitsTutorial.cpp
cw/tutorials/HOGTutorial/: CMakeLists.txt  HOGTutorial.cpp
cw/tutorials/SVM tutorial/: Goose Image Dataset (2).json  Goose Image Dataset.json  tutorial.py.OLD  tutorial2.py
week1/: main.cpp
week11/: CMakeLists.txt
week11/include/: cvtutorial.hpp
week11/src/: main.cpp
week2/: CMakeLists.txt  main.cpp
week3/: Exercise 2.cpp  Exercise 3.cpp  VisionClass.cpp  main.cpp
week4/: CMakeLists.txt  main.cpp
week4/include/: VisionClass.hpp
week4/src/: VisionClass.cpp
week5/: CMakeLists.txt
week5/src/: main.cpp
week6/: CMakeLists.txt
week6/include/: cvtutorial.hpp
week6/src/: cvtutorial.cpp  main.cpp
week7/: CMakeLists.txt
week7/include/: cv_util.hpp
week7/src/: FaceAnalysis.cpp  main.cpp
week8/: CMakeLists.txt  Dockerfile
week8/include/: VisionClass.hpp
week8/src/: FaceAnalysis.cpp  main.cpp
week9/: CMakeLists.txt
week9/include/: FaceAnalysis.hpp
week9/src/: cv_util.cpp  cvtutorial.cpp  main.cpp
